cluster/apps/zigbee2mqtt/ingress-traefikCRD.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: zigbee2mqtt
  labels:
    app.kubernetes.io/name: zigbee2mqtt
spec:
  entryPoints:
    - https
  routes:
    - kind: Rule
      match: Host(`zigbee.${SECRET_DOMAIN_0}`)
      middlewares:
        - name: headers@file
        - name: local-only@file
      services:
        - name: zigbee2mqtt-svc
          port: 8080
          namespace: default
  tls:
    secretName: ${SECRET_CERT_NAME_0}-prod-tls
